Fix figure axis

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "<contextlib.ExitStack at 0x7f0cf7be2320>"
+       "<contextlib.ExitStack at 0x7f9885ca6350>"
       ]
      },
      "execution_count": 3,
@@ -174,7 +174,7 @@
     "plt.bar(counts.keys(), counts.values)\n",
     "plt.xticks(rotation = 90)\n",
     "plt.title('Are interests RSEs safeguarded?')\n",
-    "plt.savefig('rse_safeguarded_scal.jpg')"
+    "plt.savefig('rse_safeguarded_scale.jpg', bbox_inches='tight')"
    ]
   },
   {
@@ -276,6 +276,14 @@
     "fig.suptitle('# How frequently does your work entail the activities below?')\n",
     "plt.savefig('rse_activities_v2.jpg')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d750ed4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
